# ts-lyric-analysis

./: MANIFEST.in  requirements.txt  setup.cfg
tests/: conftest.py  test_album.py  test_db.py  test_db_init.py  test_lyrics.py  test_song.py  test_util.py  test_word.py
ts_lyric_analysis/: __init__.py  album.py  db.py  lyrics.py  lyrics_BACKUP_2469977.py  lyrics_LOCAL_2469977.py  song.py  util.py  word.py
ts_lyric_analysis/database/: init_helper.py  schema.sql  songs_for_db.py  store_song_info_in_db.py
ts_lyric_analysis/database/scripts/: get_all_songs.sql  insert_album.sql  insert_debut_album.sql  insert_song.sql  select_album_id.sql
ts_lyric_analysis/db/: create_song_db.py  schema.sql
ts_lyric_analysis/static/lyrics/: 22.txt  a place in this world.txt  afterglow.txt  all too well 10 minute version.txt  all too well.txt  all you had to do was stay.txt  august.txt  babe.txt  back to december.txt  bad blood.txt  beautiful ghosts.txt  begin again.txt  better man.txt  better than revenge.txt  betty.txt  blank space.txt  breathe.txt  bye bye baby.txt  call it what you want.txt  cardigan.txt  champagne problems.txt  change.txt  christmas tree farm.txt  clean.txt  closure.txt  cold as you.txt  come back be here.txt  come in with the rain.txt  coney island.txt  cornelia street.txt  cowboy like me.txt  crazier.txt  cruel summer.txt  dancing with our hands tied.txt  daylight.txt  dear john.txt  death by a thousand cuts.txt  delicate.txt  dont blame me.txt  dont you.txt  (+137 more)
ts_lyric_analysis/templates/: base.html
ts_lyric_analysis/templates/songs/: show_all_songs.html  (+1 more)
