[metadata]
name = ts_lyric_analysis
version = 1.0.0
url = https://flask.palletsprojects.com/tutorial/
license = BSD-3-Clause
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = Taylor Swift frequency of lyrics analysis

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
	pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
	ts_lyric_analysis
